# llm-powered-file-system-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/demo_output/: note.txt
data/resumes/: alice_johnson.txt  bob_chen.txt  carol_davis.txt  david_kumar.txt  elena_petrov.docx  frank_obrien.docx  grace_yamamoto.docx
scripts/: demo.py  generate_sample_resumes.py
src/llm_file_assistant/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  fs_tools.py  llm_file_assistant.py  logging_config.py  schemas.py  tools_registry.py
src/llm_file_assistant/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
tests/: conftest.py  test_agent.py  test_fs_tools.py  test_provider_translation.py  test_tools_registry.py
